<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>logcheck</groupId>
	<artifactId>logcheck</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<!-- 
				<configuration>
					<compilerArgs>
						<compilerArg>-J-Dfile.encoding=UTF-8</compilerArg>
						<arg>classpath=C:/Users/NI1591/github.local/logcheck/lib/ojdbc8.jar</arg>
					</compilerArgs>
					<includes>
						<include>C:/Users/NI1591/github.local/logcheck/lib/weld-se.jar</include>
						<include>C:/Users/NI1591/github.local/logcheck/lib/junit-4.12.jar</include> 
						<include>C:/Users/NI1591/github.local/logcheck/lib/ojdbc8.jar</include>
					</includes>
					<testIncludes>
						<include>C:/Users/NI1591/github.local/logcheck/lib/junit-4.12.jar</include>
						<include>C:/Users/NI1591/github.local/logcheck/lib/weld-se.jar</include> 
						<include>C:/Users/NI1591/github.local/logcheck/lib/ojdbc8.jar</include>
					</testIncludes>
				</configuration>
				 -->
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20.1</version>
				<!-- 
				<configuration>
					<additionalClasspathElements>
						<additionalClasspathElement>C:/Users/NI1591/github.local/logcheck/lib/weld-se.jar</additionalClasspathElement>
						<additionalClasspathElement>C:/Users/NI1591/.m2/repository/logcheck/logcheck/0.0.1-SNAPSHOT/logcheck-0.0.1-SNAPSHOT.jar</additionalClasspathElement>
						<additionalClasspathElement>C:/Users/NI1591/github.local/logcheck/lib/ojdbc8.jar</additionalClasspathElement>
					</additionalClasspathElements>
          <parallel>classes</parallel>
          <threadCount>6</threadCount>
				</configuration>
				 -->
				<!-- 
				<executions>
					<execution>
						<id>default-test</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
				 -->
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.9</version>
				<!-- 
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
				 -->
				<executions>
					<execution>
						<id>pre-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>post-test</id>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.weld.se</groupId>
			<artifactId>weld-se-core</artifactId>
			<version>2.3.5.Final</version>
		</dependency>
		<dependency>
			<groupId>oracle.jdbc</groupId>
			<artifactId>oracle-jdbc</artifactId>
			<version>8.0</version>
		</dependency>
	</dependencies>
</project>